Fixed alignment issue and wrapping issue.

--- a/kalite/coachreports/static/css/coachreports/test_view.css
+++ b/kalite/coachreports/static/css/coachreports/test_view.css
@@ -16,6 +16,7 @@ th, td {
     font-weight: bold;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .student-table {
     float: left;
